name:                relational-mysql
version:             0.1.0.0
synopsis:            MySQL driver for haskell-relational-record
-- description:         
license:             BSD3
license-file:        LICENSE
author:              krdlab
maintainer:          krdlab@gmail.com
copyright:           2013 KrdLab
category:            Database
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
      Database.HDBC.Schema.MySQL
    , Database.Relational.Schema.MySQL
    , Database.Relational.Schema.MySQLInfo.Columns
    , Database.Relational.Schema.MySQLInfo.KeyColumnUsage
    , Database.Relational.Schema.MySQLInfo.TableConstraints
  -- other-modules:       
  other-extensions:
      TemplateHaskell
    , MultiParamTypeClasses
  build-depends:
      base >=4.6 && <4.7
    , template-haskell >=2.8 && <2.9
    , containers
    , bytestring
    , HDBC >=2.3
    , names-th
    , persistable-record
    , relational-query
    , relational-query-HDBC
    , time
  default-language:
    Haskell2010

test-suite relational-mysql-spec
  type:
    exitcode-stdio-1.0
  default-language:
    Haskell2010
  hs-source-dirs:
    test
  ghc-options:
    -Wall
  main-is:
    Spec.hs
  build-depends:
      base
    , template-haskell >=2.8 && <2.9
    , hspec
    , HDBC >=2.3
    , HDBC-mysql
    , HDBC-session
    , names-th
    , persistable-record
    , relational-query
    , relational-query-HDBC
    , relational-mysql
